[package]
name = "smtp-proxy-rs"
version = "0.1.0"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
samotop = "0.12.0"
log = "0.4.0"
env_logger = "0.8.3"
async-std = "1.9.0"
anyhow = "1.0.39"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.3", features = ["full"] }
base64 = "0.13.0"
tracing = "0.1"
twoway = "0.2.1"